@@ -1,6 +1,7 @@
 Version 2.02.82 -
 ===================================
   Add -f (don't fork) option to clvmd and fix clvmd -d<num> description.
+  Fix possible clvmd DLM lockspace increasing reference count.
 
 Version 2.02.81 - 17th January 2011
 ===================================
